cmake_minimum_required(VERSION 3.9)
project(endless_sky)
set(CMAKE_CXX_STANDARD 11)

find_package(GLEW REQUIRED)
find_package(JPEG REQUIRED)

find_package(PkgConfig)
pkg_search_module(LIBMAD REQUIRED mad)

find_package(OpenAL REQUIRED)
find_package(OpenGL REQUIRED)
find_package(PNG REQUIRED)
add_definitions(${PNG_DEFINITIONS})

find_package(SDL2 REQUIRED)
find_package(Threads REQUIRED)

add_executable(endless-sky
        source/Account.cpp
        source/Account.h
        source/AI.cpp
        source/AI.h
        source/Angle.cpp
        source/Angle.h
        source/Armament.cpp
        source/Armament.h
        source/AsteroidField.cpp
        source/AsteroidField.h
        source/Audio.cpp
        source/Audio.h
        source/BankPanel.cpp
        source/BankPanel.h
        source/BatchDrawList.cpp
        source/BatchDrawList.h
        source/BatchShader.cpp
        source/BatchShader.h
        source/BoardingPanel.cpp
        source/BoardingPanel.h
        source/Body.cpp
        source/Body.h
        source/CaptureOdds.cpp
        source/CaptureOdds.h
        source/CargoHold.cpp
        source/CargoHold.h
        source/ClickZone.h
        source/CollisionSet.cpp
        source/CollisionSet.h
        source/Color.cpp
        source/Color.h
        source/Command.cpp
        source/Command.h
        source/ConditionSet.cpp
        source/ConditionSet.h
        source/Conversation.cpp
        source/Conversation.h
        source/ConversationPanel.cpp
        source/ConversationPanel.h
        source/DataFile.cpp
        source/DataFile.h
        source/DataNode.cpp
        source/DataNode.h
        source/DataWriter.cpp
        source/DataWriter.h
        source/Date.cpp
        source/Date.h
        source/Depreciation.cpp
        source/Depreciation.h
        source/Dialog.cpp
        source/Dialog.h
        source/Dictionary.cpp
        source/Dictionary.h
        source/DistanceMap.cpp
        source/DistanceMap.h
        source/DrawList.cpp
        source/DrawList.h
        source/Effect.cpp
        source/Effect.h
        source/Engine.cpp
        source/Engine.h
        source/EscortDisplay.cpp
        source/EscortDisplay.h
        source/File.cpp
        source/File.h
        source/Files.cpp
        source/Files.h
        source/FillShader.cpp
        source/FillShader.h
        source/Fleet.cpp
        source/Fleet.h
        source/Flotsam.cpp
        source/Flotsam.h
        source/FogShader.cpp
        source/FogShader.h
        source/Font.cpp
        source/Font.h
        source/FontSet.cpp
        source/FontSet.h
        source/Format.cpp
        source/Format.h
        source/FrameTimer.cpp
        source/FrameTimer.h
        source/Galaxy.cpp
        source/Galaxy.h
        source/GameData.cpp
        source/GameData.h
        source/GameEvent.cpp
        source/GameEvent.h
        source/gl_header.h
        source/Government.cpp
        source/Government.h
        source/HailPanel.cpp
        source/HailPanel.h
        source/Hardpoint.cpp
        source/Hardpoint.h
        source/HiringPanel.cpp
        source/HiringPanel.h
        source/ImageBuffer.cpp
        source/ImageBuffer.h
        source/ImageSet.cpp
        source/ImageSet.h
        source/Information.cpp
        source/Information.h
        source/Interface.cpp
        source/Interface.h
        source/ItemInfoDisplay.cpp
        source/ItemInfoDisplay.h
        source/LineShader.cpp
        source/LineShader.h
        source/LoadPanel.cpp
        source/LoadPanel.h
        source/LocationFilter.cpp
        source/LocationFilter.h
        source/LogbookPanel.cpp
        source/LogbookPanel.h
        source/main.cpp
        source/MainPanel.cpp
        source/MainPanel.h
        source/MapDetailPanel.cpp
        source/MapDetailPanel.h
        source/MapOutfitterPanel.cpp
        source/MapOutfitterPanel.h
        source/MapPanel.cpp
        source/MapPanel.h
        source/MapSalesPanel.cpp
        source/MapSalesPanel.h
        source/MapShipyardPanel.cpp
        source/MapShipyardPanel.h
        source/Mask.cpp
        source/Mask.h
        source/MenuPanel.cpp
        source/MenuPanel.h
        source/Messages.cpp
        source/Messages.h
        source/Minable.cpp
        source/Minable.h
        source/Mission.cpp
        source/Mission.h
        source/MissionAction.cpp
        source/MissionAction.h
        source/MissionPanel.cpp
        source/MissionPanel.h
        source/Mortgage.cpp
        source/Mortgage.h
        source/Music.cpp
        source/Music.h
        source/News.cpp
        source/News.h
        source/NPC.cpp
        source/NPC.h
        source/Outfit.cpp
        source/Outfit.h
        source/OutfitInfoDisplay.cpp
        source/OutfitInfoDisplay.h
        source/OutfitterPanel.cpp
        source/OutfitterPanel.h
        source/OutlineShader.cpp
        source/OutlineShader.h
        source/Panel.cpp
        source/Panel.h
        source/Person.cpp
        source/Person.h
        source/Personality.cpp
        source/Personality.h
        source/Phrase.cpp
        source/Phrase.h
        source/pi.h
        source/Planet.cpp
        source/Planet.h
        source/PlanetLabel.cpp
        source/PlanetLabel.h
        source/PlanetPanel.cpp
        source/PlanetPanel.h
        source/PlayerInfo.cpp
        source/PlayerInfo.h
        source/PlayerInfoPanel.cpp
        source/PlayerInfoPanel.h
        source/Point.cpp
        source/Point.h
        source/PointerShader.cpp
        source/PointerShader.h
        source/Politics.cpp
        source/Politics.h
        source/Preferences.cpp
        source/Preferences.h
        source/PreferencesPanel.cpp
        source/PreferencesPanel.h
        source/Projectile.cpp
        source/Projectile.h
        source/Radar.cpp
        source/Radar.h
        source/Random.cpp
        source/Random.h
        source/Rectangle.cpp
        source/Rectangle.h
        source/RingShader.cpp
        source/RingShader.h
        source/Sale.h
        source/SavedGame.cpp
        source/SavedGame.h
        source/Screen.cpp
        source/Screen.h
        source/Set.h
        source/Shader.cpp
        source/Shader.h
        source/shift.h
        source/Ship.cpp
        source/Ship.h
        source/ShipEvent.cpp
        source/ShipEvent.h
        source/ShipInfoDisplay.cpp
        source/ShipInfoDisplay.h
        source/ShipInfoPanel.cpp
        source/ShipInfoPanel.h
        source/ShipyardPanel.cpp
        source/ShipyardPanel.h
        source/ShopPanel.cpp
        source/ShopPanel.h
        source/Sound.cpp
        source/Sound.h
        source/SpaceportPanel.cpp
        source/SpaceportPanel.h
        source/Sprite.cpp
        source/Sprite.h
        source/SpriteQueue.cpp
        source/SpriteQueue.h
        source/SpriteSet.cpp
        source/SpriteSet.h
        source/SpriteShader.cpp
        source/SpriteShader.h
        source/StarField.cpp
        source/StarField.h
        source/StartConditions.cpp
        source/StartConditions.h
        source/StellarObject.cpp
        source/StellarObject.h
        source/System.cpp
        source/System.h
        source/Table.cpp
        source/Table.h
        source/Trade.cpp
        source/Trade.h
        source/TradingPanel.cpp
        source/TradingPanel.h
        source/UI.cpp
        source/UI.h
        source/Visual.cpp
        source/Visual.h
        source/Weapon.cpp
        source/Weapon.h
        source/WrappedText.cpp
        source/WrappedText.h)

include_directories(${GLEW_INCLUDE_DIRS}
        ${JPEG_INCLUDE_DIR}
        ${LIBMAD_INCLUDE_DIRS}
        ${OPENAL_INCLUDE_DIR}
        ${OPENGL_EGL_INCLUDE_DIRS}
        ${PNG_INCLUDE_DIRS}
        ${SDL2_INCLUDE_DIR})

target_link_libraries(endless-sky
        GLEW::GLEW
        ${JPEG_LIBRARIES}
        ${LIBMAD_LIBRARIES}
        ${OPENAL_LIBRARY}
        ${OPENGL_LIBRARIES}
        PNG::PNG
        ${SDL2_LIBRARIES}
        Threads::Threads)
